# TaxReader

./: .env.example  .gitignore  README.md  app.py  backfill.py  db.py  drive.py  extract.py  extraction.py  ingest.py  main.py  poller.py  pyproject.toml  sheets.py  taxreader.db.old-drive-pipeline.bak  taxreader.db.old-schema-notice_type.bak
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  api.ts  index.css
